# DiscreteControllers

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  library.properties
examples/: CMakeLists.txt
examples/1_BuildConfiguration/Desktop/: CMakeLists.txt  main.cpp
examples/IIR/: CMakeLists.txt
examples/IIR/DC_Motor(Matlab)/Arduino/: DC_Motor(Matlab).ino
examples/IIR/DC_Motor(RealTime)/Arduino/: DC_Motor(RealTime).ino
examples/IIR/DC_Motor_Matlab/Desktop/: CMakeLists.txt  main.cpp
examples/IIR/DC_Motor_RealTime/Arduino/: DC_Motor(RealTime).ino
examples/IIR/DC_Motor_wPID(Matlab)/Arduino/: DC_Motor_wPID(Matlab).ino
examples/IIR/DC_Motor_wPID(RealTime)/Arduino/: DC_Motor_wPID(RealTime).ino
examples/IIR/DC_Motor_wPID_Matlab/Desktop/: CMakeLists.txt  main.cpp
examples/IIR_PID/: IIR_PID.ino
examples/IIR_PID/Desktop/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  DiscreteControllers.cpp  DiscreteControllers.h  DiscreteControllers.sublime-project  DiscreteControllers.sublime-workspace  DiscreteControllers_BuildSettings.h  DiscreteControllers_UserSetup.h
src/FIR/: CMakeLists.txt  FIR.h
src/IIR/: CMakeLists.txt  IIR.h
src/InputSignal/: InputSignal.h
src/OutputSignal/: OutputSignal.h
src/PID/: CMakeLists.txt  PID.h  PID_Controller.h
src/Timing/: Timing.cpp  Timing.h
tests/: CMakeLists.txt  IIR.cc
